@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-25T01:01:59Z",
-  "count_outdated" : 228,
-  "uniques_outdated" : 198,
-  "count" : 230,
-  "uniques" : 199,
+  "timestamp" : "2024-06-23T00:31:42Z",
+  "count_outdated" : 230,
+  "uniques_outdated" : 199,
+  "count" : 231,
+  "uniques" : 200,
   "clones" : [
     {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "timestamp": "2024-06-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
